--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "date-fns": "^2.19.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-select": "^4.2.1",
     "react-yandex-maps": "^4.6.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
